hphp/test/zend/good/ext/mbstring/tests/mb_strimwidth.php.skipif
<?hh extension_loaded('mbstring') || die('skip mbstring not available');