hphp/test/zend/bad/ext/mbstring/tests/htmlent.php.skipif
<?php 
	ini_set('include_path', dirname(__FILE__)); 
	extension_loaded('mbstring') or die('skip mbstring not available'); 
?>